# posixlake

./: .gitignore  Cargo.toml  FABRIC_SETUP.md  IMPORTANT.md  LICENSE.md  PLAN.md  PROD_READINESS.md  PROGRESS_CSV_PARQUET_IMPORT.md  README.md  RELEASE.md  RELEASE_POLICY.md  SECURITY.md  STRESS_TEST_RESULTS.md  SUPPORT.md  docker-compose.yml  plan.md  test_posixlake.py
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.cosynt/: code-meta.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
bindings/python/: MANIFEST.in  README.md  setup.py
bindings/python/fsdb/: fsdb.py
bindings/python/posixlake/: __init__.py
bindings/python/tests/: test_s3.py
demo/: .gitignore  PLAN.md  README.md  candycam_helper.py  config.py  narration.py  orchestrate.py  pyproject.toml  scene_runner.py
demo/posixlake_cli_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: DELTA_MERGE_IMPLEMENTATION.md  auth-modes.md  azure-integration.md  compatibility.md  deprecation.md  release-notes-template.md  slo.md  threat-model.md
docs/releases/: v1.0.0.md
docs/runbooks/: backup-restore.md  incident-triage.md  upgrade-rollback.md
fsdb/: Cargo.toml  build.rs
fsdb/examples/: backup_restore.rs  basic_usage.rs  concurrent_access.rs  delta_native.rs  interop_test_spark_fsdb.py  monitoring.rs  python_example.py  s3_storage.rs  schema_evolution.rs  security_rbac.rs
fsdb/src/: database_ops.rs  lib.rs  python.rs  transaction.rs
fsdb/src/delta_lake/: data_skipping.rs  merge.rs  mod.rs
fsdb/src/metadata/: backup.rs  schema.rs
fsdb/src/nfs/: attr_cache.rs  file_views.rs  mod.rs  server.rs  write_buffer.rs
fsdb/src/query/: datafusion_provider.rs  executor.rs  mod.rs  pruning.rs
fsdb/src/security/: rbac.rs
fsdb/src/storage/: path.rs
posixlake/: Cargo.toml  build.rs
posixlake/examples/: backup_restore.rs  basic_usage.rs  concurrent_access.rs  delta_native.rs  interop_test_spark_fsdb.py  monitoring.rs  python_example.py  s3_storage.rs  schema_evolution.rs  security_rbac.rs  test_import.py
posixlake/src/: batch_buffer.rs  database_ops.rs  error.rs  lib.rs  python.rs  transaction.rs
posixlake/src/delta_lake/: merge.rs  operations.rs  stats.rs
posixlake/src/import/: csv.rs  mod.rs  parquet.rs
posixlake/src/metadata/: backup.rs  mod.rs  schema.rs
posixlake/src/nfs/: cache.rs  file_views.rs  mmap_cache.rs  mod.rs  server.rs  windows.rs  write_buffer.rs
posixlake/src/query/: datafusion_provider.rs  executor.rs  mod.rs
posixlake/src/security/: audit.rs  auth.rs  mod.rs
posixlake/src/storage/: azure.rs  local.rs  mod.rs  parquet.rs  s3.rs
scripts/: _assign_directory_role.py  full_test.py  setup_fabric.py  setup_nfs_sudo.py  test_linux_nfs.py  test_pip_package.py  test_python_azure.py  test_python_s3.py
tests/: AZURE_TEST_SETUP.md  Cargo.toml  POSIX_TEST_SETUP.md
tests/tests/: auth_test.rs  azure_cli_test.rs  azure_test.rs  backup_restore_test.rs  cli_test.rs  column_stats_test.rs  complex_types_test.rs  create_test.rs  csv_import_test.rs  csv_schema_test.rs  data_skipping_test.rs  delta_native_test.rs  explicit_transaction_test.rs  fabric_test.rs  failure_drill_test.rs  merge_test.rs  monitoring_test.rs  nfs_cache_test.rs  nfs_mv_test.rs  nfs_rmdir_test.rs  nfs_test.rs  ops_cli_test.rs  optimize_test.rs  parquet_import_test.rs  performance_test.rs  query_schema_test.rs  recovery_test.rs  s3_cli_test.rs  s3_create_mount_test.rs  s3_test.rs  schema_migration_test.rs  stress_test.rs  time_travel_test.rs  upgrade_compat_test.rs  vacuum_test.rs  write_buffer_test.rs  zorder_test.rs
