[package]
name = "fsdb-integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
fsdb = { path = "../fsdb" }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
arrow = "56.2.0"
parquet = "56.2.0"
tokio = { version = "1.48.0", features = ["full"] }
tempfile = "3.23.0"
tracing.workspace = true
serial_test = "3.2.0"
libc = "0.2.177"
serde_json.workspace = true
deltalake = { version = "0.29.4", features = ["datafusion"] }
url = "2.5.7"
reqwest = "0.12.24"

[dev-dependencies]
# Integration tests use the main dependencies
